jilles      2006/10/25 17:43:00 UTC	(20061025-6947)
  Log:
  cmode.c: fix up bad assignments in if
  (someone had silenced the warning but the variable was
  not supposed to be assigned)
  

  Changes:	Modified:
  +9 -3		trunk/src/cmode.c (File Modified) 


jilles      2006/10/25 17:29:26 UTC	(20061025-6945)
  Log:
  Add extra set of parentheses around assignment in if.
  

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/clones.c (File Modified) 


jilles      2006/10/25 17:04:55 UTC	(20061025-6943)
  Log:
  Fix alignment by adding a tab.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/Makefile.in (File Modified) 


w00t        2006/10/25 16:39:43 UTC	(20061025-6941)
  Log:
  Fix helpfile; clone limits are now respected.

  Changes:	Modified:
  +2 -2		trunk/help/oservice/clones (File Modified) 


w00t        2006/10/25 16:38:04 UTC	(20061025-6939)
  Log:
  Make clone limits actually do something.

  Changes:	Modified:
  +20 -13	trunk/modules/operserv/clones.c (File Modified) 


jilles      2006/10/25 15:44:02 UTC	(20061025-6937)
  Log:
  doc/RELEASE: mention that many comments were added to the code
  

  Changes:	Modified:
  +1 -0		trunk/doc/RELEASE (File Modified) 


jilles      2006/10/25 00:43:03 UTC	(20061025-6935)
  Log:
  chanserv clear users: don't chanuser_delete() after kick(),
  kick() already does it and that may destroy the channel
  

  Changes:	Modified:
  +0 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


jilles      2006/10/24 22:03:31 UTC	(20061024-6933)
  Log:
  channels.c: add more details to the comments
  

  Changes:	Modified:
  +32 -21	trunk/src/channels.c (File Modified) 


jilles      2006/10/24 16:53:07 UTC	(20061024-6931)
  Log:
  src: update copyright years
  

  Changes:	Modified:
  +1 -1		trunk/src/account.c (File Modified) 
  +1 -1		trunk/src/channels.c (File Modified) 
  +1 -1		trunk/src/cmode.c (File Modified) 
  +1 -1		trunk/src/commandtree.c (File Modified) 
  +1 -1		trunk/src/conf.c (File Modified) 